--- a/FastFoodRestaurant.csproj
+++ b/FastFoodRestaurant.csproj
@@ -21,4 +21,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="_Content\DesignResources\" />
+  </ItemGroup>
+
 </Project>
