--- a/FastFoodRestaurant.csproj
+++ b/FastFoodRestaurant.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Assets\Uml\" />
     <Folder Include="Controllers\ExceptionHandling\" />
   </ItemGroup>
 
